--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,11 +2,11 @@ name: Deploy
 'on': push
 jobs:
   my-job: null
-  runs-on: ubuntu-latest
-  steps:
+    runs-on: ubuntu-latest
+    steps:
     - name: Checkout
       uses: actions/checkout@v3
-    - name: Instal NodeJS
+    - name: Install NodeJS
       uses: actions/setup-node@v3
       with:
         node-version: 18
